Fix error overflow

--- a/src/components/walletconnect/WcErrorMessage/styles.module.css
+++ b/src/components/walletconnect/WcErrorMessage/styles.module.css
@@ -9,3 +9,10 @@
   padding: var(--space-1) var(--space-4);
   margin-top: var(--space-3);
 }
+
+.details {
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  hyphens: auto;
+}
