--- a/src/components/walletconnect/WcLogoHeader/styles.module.css
+++ b/src/components/walletconnect/WcLogoHeader/styles.module.css
@@ -16,4 +16,5 @@
   width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
+  hyphens: auto;
 }
